--- a/sala-de-juegos/src/app/components/pages/resultados/resultados.component.html
+++ b/sala-de-juegos/src/app/components/pages/resultados/resultados.component.html
@@ -4,10 +4,29 @@
 <h2>🏆 Ranking de Jugadores</h2>
 
 <div class="botones-juego">
-    <button (click)="cambiarJuego('simon')">🟥 Simón Dice</button>
-    <button (click)="cambiarJuego('preguntados')">🟨 Preguntados</button>
-    <button (click)="cambiarJuego('mayor-o-menor')">🟩 Mayor o Menor</button>
-    <button (click)="cambiarJuego('ahorcado')">🟦 Ahorcado</button>
+    <button 
+        (click)="cambiarJuego('simon')" 
+        [ngClass]="{ 'activo': juegoSeleccionado === 'simon' }">
+        🟥 Simón Dice
+    </button>
+
+    <button 
+        (click)="cambiarJuego('preguntados')" 
+        [ngClass]="{ 'activo': juegoSeleccionado === 'preguntados' }">
+        🟨 Preguntados
+    </button>
+
+    <button 
+        (click)="cambiarJuego('mayor-o-menor')" 
+        [ngClass]="{ 'activo': juegoSeleccionado === 'mayor-o-menor' }">
+        🟩 Mayor o Menor
+    </button>
+
+    <button 
+        (click)="cambiarJuego('ahorcado')" 
+        [ngClass]="{ 'activo': juegoSeleccionado === 'ahorcado' }">
+        🟦 Ahorcado
+    </button>
 </div>
 
 <app-top-jugadores [juego]="juegoSeleccionado"></app-top-jugadores>
